# CodeAstra

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README  README.md  resources.qrc  run_docker.sh  test_with_xvbf.sh
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature-request.md  feature_request.md
.github/workflows/: cpp.yml  test.yml
config/: cpp.syntax.yaml  cxx.syntax.yaml  go.syntax.yaml  markdown.syntax.yaml  python.syntax.yaml  yaml.syntax.yaml
include/: CodeEditor.h  FileManager.h  LineNumberArea.h  MainWindow.h  Syntax.h  SyntaxManager.h  Tree.h  codeeditor.h  linenumber.h  mainwindow.h
include/Syntax/: Syntax.h  SyntaxCpp.h  SyntaxGo.h
resources/syntax/: cxx.syntax.yaml  go.syntax.yaml  python.syntax.yaml  tsx.syntax.yaml  yaml.syntax.yaml
resources/themes/: dark.qss
src/: CMakeLists.txt  CodeEditor.cpp  FileManager.cpp  MainWindow.cpp  Syntax.cpp  SyntaxManager.cpp  Tree.cpp  codeeditor.cpp  main.cpp  mainwindow.cpp
src/Syntax/: Syntax.cpp  SyntaxCpp.cpp  SyntaxGo.cpp
tests/: CMakeLists.txt  test_filemanager.cpp  test_mainwindow.cpp  test_syntax.cpp  test_tree.cpp
